# thiol

./: .gitignore  Cargo.toml  README.md  scribbling.rsh
.github/workflows/: rust.yml
.reuse/: dep5
tests/fail/: call_on_non_function.rsh  pos_arg_after_named_arg.rsh  primitive_type_constructor_invalid_position.rsh  redefined_constant.rsh  redefined_function.rsh
tests/parsing-pass/: water_shader.rsh
tests/typeck-pass/: distinct_types.rsh  type_dependencies.rsh  types.rsh
thiol-ast-lowering/: Cargo.toml
thiol-ast-lowering/src/: lib.rs
thiol-hir/: Cargo.toml
thiol-hir/src/: lib.rs
thiol-syntax/: Cargo.toml
thiol-syntax/src/: ast.rs  lexer.rs  lib.rs  parser.rs
thiol-typeck/: Cargo.toml
thiol-typeck/src/: lib.rs  types.rs
thiolc/: Cargo.toml
thiolc/src/: main.rs  pretty_printing.rs
thiolc/tests/: goldentests.rs
