# SPDX-FileCopyrightText: 2021 The thiol developers
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "thiol-syntax"
version = "0.1.0"
authors = ["tiatomee <tia-github@poto.cafe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12"
peg = { git = "https://github.com/kevinmehall/rust-peg" }